[package]
name = "subtle-ng"
# Before incrementing:
# - update CHANGELOG
# - update html_root_url
# - update README if necessary by semver
version = "2.5.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/zkcrypto/subtle-ng"
documentation = "https://docs.rs/subtle-ng"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "constant-time", "utilities"]
description = "Pure-Rust traits and utilities for constant-time cryptographic implementations."

[dev-dependencies]
rand = { version = "0.7" }

[features]
default = ["std", "i128"]
std = []
i128 = []
